--- a/error-page.html
+++ b/error-page.html
@@ -4,11 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Index</title>
-	<link rel="stylesheet" href="styles/main.css">
-	<link rel="stylesheet" href="styles/FAQ.css">
-	<link rel="stylesheet" href="styles/search.css">
-	<link rel="stylesheet" href="styles/contacts.css">
-	<link rel="stylesheet" href="styles/error-page.css">
+    <link rel="stylesheet" href="styles/jquery.mobile-menu.css" />
+	<link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
