--- a/old-browsers.html
+++ b/old-browsers.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Index</title>
-    <link rel="stylesheet" href="styles/main.css">
-	<link rel="stylesheet" href="styles/old-browsers.css">
+    <link rel="stylesheet" href="styles/jquery.mobile-menu.css" />
+	<link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
