started user profile

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="cheDream.app">
 <head>
-    <title>{{ title }}</title>
+    <title ng-bind="title"></title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="icon" href="images/popup-thanks.ico">
@@ -12,6 +12,7 @@
     <script src="node_modules/angular-animate/angular-animate.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
     <script src="bower_components/angular-loading/angular-loading.js"></script>
+    <script src="bower_components/ng-facebook/ngFacebook.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/routing.js"></script>
@@ -27,6 +28,8 @@
     <script src="js/faq/controller.js"></script>
     <script src="js/contacts/model.js"></script>
     <script src="js/contacts/controller.js"></script>
+    <script src="js/profile/controller.js"></script>
+
 
     <!--<script src="js/addDream/model.js"></script>-->
     <!--<script src="js/addDream/controller.js"></script>-->
