add new style for media

--- a/dream.html
+++ b/dream.html
@@ -6,6 +6,7 @@
 	<title>Dream</title>
     <link rel="stylesheet" href="styles/jquery.mobile-menu.css" />
 	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="styles/media.css">
 </head>
 
 <body>
