--- a/FAQ.html
+++ b/FAQ.html
@@ -6,6 +6,7 @@
 	<title>Index</title>
     <link rel="stylesheet" href="styles/jquery.mobile-menu.css" />
 	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="styles/media.css">
 </head>
 
 <body>
