--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="icon" href="images/popup-thanks.ico">
-    <link rel="stylesheet" href="styles/contacts.css">
-    <link rel="stylesheet" href="styles/dream.css">
-    <link rel="stylesheet" href="styles/error-page.css">
-    <link rel="stylesheet" href="styles/FAQ.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/new-dream(empty+full)+edit-page.css">
-    <link rel="stylesheet" href="styles/search.css">
-    <link rel="stylesheet" href="styles/user-profile.css">
-    <link rel="stylesheet" href="styles/user-profile-edit.css">
-    <link rel="stylesheet" href="bower_components/angular-loading/angular-loading.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="bower_components/angular-carousel/dist/angular-carousel.css" rel="stylesheet" type="text/css" />
 
     <script src="node_modules/angular/angular.js"></script>
