--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="icon" href="images/popup-thanks.ico">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="bower_components/angular-carousel/dist/angular-carousel.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="static/css/style.css">
 
     <script src="node_modules/angular/angular.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
