--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="images/popup-thanks.ico">
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="stylesheet" href="styles/dream.css">
+
     <script src="node_modules/angular/angular.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
