--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
     <script src="bower_components/angular-loading/angular-loading.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/routing.js"></script>
